# IMS

./: .gitignore  AGENTS.md  CHANGELOG.md  Local-API-Spec-v0.1.md  README.md  candidates-after-layout-fix.md  candidates-before-layout-fix.md  cliff.toml  drizzle.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  session.md  tsconfig.json  turbo.json  vitest.config.ts
.github/workflows/: release-desktop.yml
.serena/: project.yml
.sisyphus/: boulder.json  chatbot-qa-evidence.md  ralph-loop.local.md
.sisyphus/plans/: import-ai-screening-upgrade.md  ims-master-plan.md  lui-agent-decoupling.md
.sisyphus/tasks/: T-00fdd707-55ff-431a-84e9-ca257f139939.json  T-05682a00-a6d6-46a6-911b-f429a2ab6877.json  T-097b1e1a-6ea1-42e5-bd71-d253b782e1a0.json  (+78 more)
apps/desktop/: AGENTS.md  Cargo.toml  Info.plist  package.json  tauri.conf.json  tauri.local.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/scripts/: download-sparkle.sh
apps/desktop/src/: lib.rs
assets/: baobao.getui.com.har
docs/: Agent-Extension-Architecture.md  Extension-Development.md  IMR-Spec.md  Import-Pipeline-Spec-v0.1.md  Local-API-Spec-v0.1.md  PRD-v0.1.md  SPEC.md  STATUS.md  baobao-qr-login-alternatives-research.md  desktop-auto-update-validation.md
e2e/: candidates-route.spec.ts  changelog.spec.ts  import-gateway.spec.ts  lui-gateway.spec.ts  public-routes.spec.ts  remote-authenticated-pages.spec.ts  settings-gateway.spec.ts
playwright-report/: index.html
scripts/: changelog-draft.mjs  generate-sparkle-appcast.mjs  generate-whats-new.mjs  playwright-remote.mjs  reinstall-desktop.sh  release-readiness.mjs  reset-desktop-state.sh  reset-web-and-dev.sh  reset-web-state.sh  start-desktop-dev.sh  start-web-dev.sh  verify-auto-update.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+404 files in other folders)
