[package]
name = "interview-manager"
version = "0.1.0"
description = "Interview Manager desktop client"
authors = ["interview-manager team"]
edition = "2021"

[lib]
name = "interview_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
