[package]
name = "interview-manager"
version = "1.0.12"
description = "Interview Manager desktop client"
authors = ["interview-manager team"]
edition = "2021"

[lib]
name = "interview_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

# Tauri plugins
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
